# streamlit_app

./: .gitignore  README.md  app.py  pyproject.toml
src/ai/: app_ai.py  models.json
src/db/: app.db  app_db.py
src/pages/: configuracoes.py  contexto.py  home.py  projetos.py  visao_geral.py  visao_geral_projeto.py
src/utils/: ai_utils.py  ui.py
